fixed text clipping in banner on small viewports

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@
 }
 .header-bottom {
   position: relative;
+  padding-top:4rem;
 }
 .header-bottom .banner-wrap {
   position: absolute;
@@ -63,6 +64,7 @@
 }
 .header-bottom .banner-contents {
   width: 650px;
+  padding-top:50px;
 }
 .header-bottom .banner-contents h1 {
   font-size: 50px;
